--- a/recurrent_neural_networks-final.ipynb
+++ b/recurrent_neural_networks-final.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -245,7 +245,7 @@
        "4  2015-02-24 11:14:45 -0800            NaN  Pacific Time (US & Canada)  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "(14640, 15)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "'VirginAmerica What dhepburn said'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "        vocabulary=None)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,19 +545,19 @@
        "3  0.0   0.0   0.0  0.0            0.0            0.0            0.0   \n",
        "4  0.0   0.0   0.0  0.0            0.0            0.0            0.0   \n",
        "\n",
-       "   0167560070877  0214  021mbps    ...      zkatcher  zombie  zone  zones  \\\n",
-       "0            0.0   0.0      0.0    ...           0.0     0.0   0.0    0.0   \n",
-       "1            0.0   0.0      0.0    ...           0.0     0.0   0.0    0.0   \n",
-       "2            0.0   0.0      0.0    ...           0.0     0.0   0.0    0.0   \n",
-       "3            0.0   0.0      0.0    ...           0.0     0.0   0.0    0.0   \n",
-       "4            0.0   0.0      0.0    ...           0.0     0.0   0.0    0.0   \n",
+       "   0167560070877  0214  021mbps  ...  zkatcher  zombie  zone  zones  zoom  \\\n",
+       "0            0.0   0.0      0.0  ...       0.0     0.0   0.0    0.0   0.0   \n",
+       "1            0.0   0.0      0.0  ...       0.0     0.0   0.0    0.0   0.0   \n",
+       "2            0.0   0.0      0.0  ...       0.0     0.0   0.0    0.0   0.0   \n",
+       "3            0.0   0.0      0.0  ...       0.0     0.0   0.0    0.0   0.0   \n",
+       "4            0.0   0.0      0.0  ...       0.0     0.0   0.0    0.0   0.0   \n",
        "\n",
-       "   zoom  zrh  zrhairport  zukes  zurich  zurichnew  \n",
-       "0   0.0  0.0         0.0    0.0     0.0        0.0  \n",
-       "1   0.0  0.0         0.0    0.0     0.0        0.0  \n",
-       "2   0.0  0.0         0.0    0.0     0.0        0.0  \n",
-       "3   0.0  0.0         0.0    0.0     0.0        0.0  \n",
-       "4   0.0  0.0         0.0    0.0     0.0        0.0  \n",
+       "   zrh  zrhairport  zukes  zurich  zurichnew  \n",
+       "0  0.0         0.0    0.0     0.0        0.0  \n",
+       "1  0.0         0.0    0.0     0.0        0.0  \n",
+       "2  0.0         0.0    0.0     0.0        0.0  \n",
+       "3  0.0         0.0    0.0     0.0        0.0  \n",
+       "4  0.0         0.0    0.0     0.0        0.0  \n",
        "\n",
        "[5 rows x 16349 columns]"
       ]
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "Name: airline_sentiment, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,24 +682,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0715 16:00:04.638894 4702528960 deprecation_wrapper.py:119] From /anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0715 16:00:04.657161 4702528960 deprecation_wrapper.py:119] From /anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0715 16:00:04.772367 4702528960 deprecation_wrapper.py:119] From /anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3295: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n",
+      "W0715 16:00:04.920970 4702528960 deprecation.py:323] From /anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "W0715 16:00:04.985510 4702528960 deprecation_wrapper.py:119] From /anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 750 samples, validate on 250 samples\n",
+      "Train on 10980 samples, validate on 3660 samples\n",
       "Epoch 1/5\n",
-      "750/750 [==============================] - 5s 7ms/step - loss: 0.9896 - acc: 0.5133 - val_loss: 1.0125 - val_acc: 0.5160\n",
+      "10980/10980 [==============================] - 302s 28ms/step - loss: 0.9495 - acc: 0.5522 - val_loss: 0.8299 - val_acc: 0.6268\n",
       "Epoch 2/5\n",
-      "750/750 [==============================] - 0s 354us/step - loss: 0.9368 - acc: 0.5133 - val_loss: 0.9898 - val_acc: 0.5160\n",
+      "10980/10980 [==============================] - 353s 32ms/step - loss: 0.7096 - acc: 0.6286 - val_loss: 0.6931 - val_acc: 0.6459\n",
       "Epoch 3/5\n",
-      "750/750 [==============================] - 0s 320us/step - loss: 0.8600 - acc: 0.5133 - val_loss: 0.9688 - val_acc: 0.5160\n",
+      "10980/10980 [==============================] - 371s 34ms/step - loss: 0.5381 - acc: 0.7117 - val_loss: 0.6309 - val_acc: 0.7153\n",
       "Epoch 4/5\n",
-      "750/750 [==============================] - 0s 317us/step - loss: 0.7775 - acc: 0.5347 - val_loss: 0.9491 - val_acc: 0.5200\n",
+      "10980/10980 [==============================] - 380s 35ms/step - loss: 0.3954 - acc: 0.8542 - val_loss: 0.6138 - val_acc: 0.7544\n",
       "Epoch 5/5\n",
-      "750/750 [==============================] - 0s 324us/step - loss: 0.6885 - acc: 0.6320 - val_loss: 0.9307 - val_acc: 0.5240\n"
+      "10980/10980 [==============================] - 865s 79ms/step - loss: 0.2852 - acc: 0.9338 - val_loss: 0.6463 - val_acc: 0.7697\n"
      ]
     }
    ],
@@ -1109,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
